<resources>
    <string name="app_name">EtiTips</string>
    <string name="main_button_text">To the Tips!</string>
    <string name="logo_desc">logo</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="affiliates">Affiliates</string>
    <string name="menu_title">Choose the Continent</string>
    <string name="menu_americas">AMERICAS</string>
    <string name="menu_europe">EUROPE</string>
    <string name="menu_africa">AFRICA</string>
    <string name="menu_asia_amp_oceania"><![CDATA[ASIA & OCEANIA]]></string>
    <string name="menu_americas_desc">map americas</string>
    <string name="menu_europe_desc">map europe</string>
    <string name="menu_africa_desc">map africa</string>
    <string name="menu_asia_oceania_desc">map asia</string>

    <!-- New strings for updated design with fragments -->
    <string name="continent_americas">Americas</string>
    <string name="continent_europe">Europe</string>
    <string name="continent_asia_oceania"><![CDATA[ASIA & OCEANIA]]></string>
    <string name="continent_africa">Africa</string>

    <!-- Country section fragment strings -->
    <string name="country_social">Social</string>
    <string name="country_food_and_drink"><![CDATA[Food & Drink]]></string>
    <string name="country_culture">Culture</string>
    <string name="country_transport">Mass Transit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
